# Frida-android

./: Cargo.toml
src/: client.rs  config.rs  lib.rs  main.rs  udp.rs
